--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -1,70 +1,148 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
+@import 'libs/skel';
 
 /*
-	Overflow by HTML5 UP
+	Highlights by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Basic */
 
-	body {
-		background-image: url('../../images/bg.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: auto;
-		background-attachment: scroll;
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+	body, html {
+		height: 100%;
 	}
 
-/* Section/Article */
+	html {
+		background: none;
+	}
 
-	section > .last-child,
-	article > .last-child,
-	section.last-child,
-	article.last-child {
-		margin-bottom: 0;
+/* List */
+
+	ul {
+		&.actions {
+			li {
+				padding: 0 0 0 (_size(element-margin) * 0.5);
+
+				&:first-child {
+					padding-left: 0;
+				}
+			}
+		}
+	}
+
+/* Form */
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	select,
+	textarea {
+		border: solid 2px _palette(border);
+		position: relative;
+	}
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"] {
+		line-height: _size(element-height);
+	}
+
+	input[type="checkbox"],
+	input[type="radio"] {
+		font-size: 3em;
+
+		& + label {
+			&:before {
+				display: none;
+			}
+		}
 	}
 
 /* Button */
 
-	input[type="button"],
 	input[type="submit"],
 	input[type="reset"],
+	input[type="button"],
 	button,
 	.button {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-
-		&.style2 {
-			&:hover {
-				color: #35b88f !important;
-			}
-		}
-
-		&.style3 {
-			background: #fefefe;
-			border: solid 1px #dad9d9;
-		}
+		border: solid 2px _palette(border);
 	}
 
-/* Footer */
+/* Main BG */
 
-	#footer {
-		.icons {
+	.main-bg {
+		z-index: 0;
+	}
+
+/* Main */
+
+	.main {
+		background-size: cover;
+
+		.container {
+			background: _palette(bg);
+			border-top: solid 1px _palette(border);
 			position: relative;
-			-ms-behavior: url('assets/js/ie/PIE.htc');
+			z-index: 1;
+		}
+
+		.goto-next {
+			@include icon;
+
+			&:before {
+				color: _palette(border);
+				content: '\f063';
+				display: block;
+				font-size: 2em;
+				height: 2em;
+				left: 0;
+				line-height: 2em;
+				position: absolute;
+				text-align: center;
+				text-indent: 0;
+				top: 0;
+				width: 2em;
+			}
 		}
 	}
 
 /* Header */
 
 	#header {
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+		background-image: url('../../images/bg.jpg');
+		background-size: cover;
+		height: 100%;
+
+		&:after {
+			min-height: 100%;
+		}
+
 		header {
-			p {
-				border-top: solid 1px #888;
-			}
+			position: relative;
+			z-index: 1;
+		}
+
+		.container {
+			background: _palette(bg);
+			z-index: 1;
+		}
+	}
+
+/* Footer */
+
+	#footer {
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+		background-image: url('../../images/bg.jpg');
+		background-size: cover;
+
+		.container {
+			background: _palette(bg);
+			border-top: solid 1px _palette(border);
+			position: relative;
+			z-index: 1;
 		}
 	}
