Fixed formatting for grid, updated borders to be darker for transparentized background on xsmall

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -34,6 +34,7 @@
         fg-lighter:         #e8f0f3,
         border:             #dddddd,
         border-bg:          rgba(144,144,144,0.075),
+        border-dark:        #bbbbbb,
         border2:            #d3d3d3,
         border2-bg:         rgba(144,144,144,0.15),
 
