--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1655,7 +1655,8 @@ img.logo {
   width: 3.2em; }
 img.the-game-icon {
   margin: 1em;
-  width: 30%; }
+  max-width: 40%;
+  max-height: 40%; }
 img.bg {
   display: none; }
 
@@ -1726,12 +1727,14 @@ ul {
     ul.icons-grid li {
       display: block;
       float: left;
-      padding: 3em 0;
-      width: 50%; }
+      padding: 2em;
+      width: -webkit-calc(50% - 1px);
+      width: -moz-calc(50% - 1px);
+      width: calc(50% - 1px); }
       ul.icons-grid li h3 {
         margin: 0; }
       ul.icons-grid li:nth-child(2n + 1) {
-        box-shadow: inset -1px 0 0 0 #dddddd, 1px 0 0 0 #dddddd; }
+        border-right: 2px solid #dddddd; }
       ul.icons-grid li:nth-child(2n + 3):before {
         background: #dddddd;
         content: '';
@@ -1739,7 +1742,9 @@ ul {
         height: 2px;
         margin-top: -3em;
         position: absolute;
-        width: 100%; }
+        width: -webkit-calc(100% - 2em*2);
+        width: -moz-calc(100% - 2em*2);
+        width: calc(100% - 2em*2); }
     ul.icons-grid:after {
       clear: both;
       content: '';
@@ -2131,6 +2136,13 @@ button,
           margin-left: 0;
           padding-left: 0; }
 
+/* Custom */
+.the-game-text h3 {
+  text-align: center; }
+.the-game-text p {
+  margin: 0;
+  text-align: left; }
+
 /* Large */
 @media screen and (max-width: 1680px) {
   /* Basic */
@@ -2168,6 +2180,17 @@ button,
   h2 {
     font-size: 1.35em; }
 
+  /* Image */
+  .img-on-left {
+    margin: 1em 0; }
+    .img-on-left img {
+      margin: 1em; }
+
+  .img-on-right {
+    margin: 1em 0; }
+    .img-on-right img {
+      margin: 1em; }
+
   /* Main */
   .main .container {
     padding: 3em 1.5em 1em 1.5em ; }
@@ -2196,6 +2219,10 @@ button,
   /* Basic */
   html, body {
     min-width: 320px; }
+
+  /* Section/Article */
+  header.major h1:after, header.major h2:after, header.major h3:after, header.major h4:after, header.major h5:after, header.major h6:after {
+    background: #bbbbbb; }
 
   /* Image */
   .img-on-left {
@@ -2228,17 +2255,15 @@ button,
       ul.actions.small li:first-child {
         padding-top: 0; }
   ul.icons-grid li {
-    box-shadow: inset 0 1px 0 0 #dddddd !important;
+    border-top: 1px solid #bbbbbb;
+    border-right: none !important;
     float: none;
     margin: 2em 0 0 0;
     padding: 2em 0 0 0;
     width: 100%; }
     ul.icons-grid li:first-child {
-      box-shadow: none !important;
-      margin-top: 0;
+      border-top: none;
       padding: 1em 0 0 0; }
-    ul.icons-grid li:nth-child(2n + 1) {
-      box-shadow: none; }
     ul.icons-grid li:nth-child(2n + 3):before {
       display: none; }
   ul.icons-column li {
@@ -2247,6 +2272,7 @@ button,
     ul.icons-column li h3 {
       margin: 0; }
     ul.icons-column li:not(:first-child):before {
+      background: #bbbbbb;
       height: 1px;
       margin-top: -0.5em;
       width: 50%; }
@@ -2284,6 +2310,10 @@ button,
       border-left: 0;
       display: block;
       margin: 0;
-      padding: 0; } }
+      padding: 0; }
+
+  /* Custom */
+  .the-game-text p {
+    text-align: center; } }
 
 /*# sourceMappingURL=main.css.map */
